--- a/Test.html
+++ b/Test.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
+<head> 
+<meta charset="utf-8">
+<title> STA Tutors </title>
+<style> </style>
+<link rel="stylesheet" href="css/normalize.css"> <!-- to level playing field for all browsers -->
+
+<!-- <link href= fonts  -->
+<link rel="stylesheet" href="css/main.css">
+ </head>
 <body>
+
+
 
 <h1>My First Web Page</h1>
 <p>My first paragraph.</p>
